--- a/VS/kbang_common.vcxproj.filters
+++ b/VS/kbang_common.vcxproj.filters
@@ -13,62 +13,62 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\common\gameenums.cpp">
+    <ClCompile Include="..\src\common\config.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\common\util.cpp">
+    <ClCompile Include="..\src\common\gameenums.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\common\config.cpp">
+    <ClCompile Include="..\src\common\util.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\common\parser\ioproxy.cpp">
+    <ClCompile Include="..\src\common\parser\ioproxy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\common\parser\parser.cpp">
+    <ClCompile Include="..\src\common\parser\parser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\common\parser\parserstructs.cpp">
+    <ClCompile Include="..\src\common\parser\parserstructs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\common\parser\queryget.cpp">
+    <ClCompile Include="..\src\common\parser\queryget.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\common\parser\queryresult.cpp">
+    <ClCompile Include="..\src\common\parser\queryresult.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\common\parser\xmlnode.cpp">
+    <ClCompile Include="..\src\common\parser\xmlnode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\common\gameenums.h">
+    <ClInclude Include="..\src\common\config.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\common\util.h">
+    <ClInclude Include="..\src\common\gameenums.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\common\config.h">
+    <ClInclude Include="..\src\common\util.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\common\parser\parserstructs.h">
+    <ClInclude Include="..\src\common\parser\parserstructs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\common\parser\queryresult.h">
+    <ClInclude Include="..\src\common\parser\queryresult.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <QtMoc Include="src\common\parser\ioproxy.h">
+    <QtMoc Include="..\src\common\parser\ioproxy.h">
       <Filter>Header Files</Filter>
     </QtMoc>
-    <QtMoc Include="src\common\parser\parser.h">
+    <QtMoc Include="..\src\common\parser\parser.h">
       <Filter>Header Files</Filter>
     </QtMoc>
-    <QtMoc Include="src\common\parser\queryget.h">
+    <QtMoc Include="..\src\common\parser\queryget.h">
       <Filter>Header Files</Filter>
     </QtMoc>
-    <QtMoc Include="src\common\parser\xmlnode.h">
+    <QtMoc Include="..\src\common\parser\xmlnode.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
