--- a/VS/kbang-client.vcxproj.filters
+++ b/VS/kbang-client.vcxproj.filters
@@ -301,5 +301,8 @@
     <QtUic Include="..\src\client\opponentwidget.ui">
       <Filter>Form Files</Filter>
     </QtUic>
+    <QtUic Include="cardwidget.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
   </ItemGroup>
 </Project>
