--- a/VS/kbang-client.vcxproj
+++ b/VS/kbang-client.vcxproj
@@ -111,6 +111,9 @@
     <QtUic Include="..\src\client\opponentwidget.ui" />
     <QtUic Include="cardwidget.ui" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="kbang-client_es.ts" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{8F447AB6-4A3A-396E-8793-0B0347238E51}</ProjectGuid>
     <RootNamespace>kbang-client</RootNamespace>
