Add some translations Add Qt module network to common (since it actually needs QAbstractSocket) Some quality of life refactoring (adding const to functions and variables, changing 0 to nullptr)   * Add some default values to variables   * Transform old Qt slot into new version with method reference
Now parser asks for an AbstractSokect instead of an IODevice due to the fact that a signal from AbstractSocket was actually used (this was hidden on compile time due to the old SLOT system)
Transform some pointers of parser into unique_ptr and shared_ptr
Avatar was read theorically but wasn't actually handled into other parts of the program

--- a/VS/kbang_common.vcxproj
+++ b/VS/kbang_common.vcxproj
@@ -81,7 +81,7 @@
   </ImportGroup>
   <PropertyGroup Label="QtSettings" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <QtInstall>msvc2017_64</QtInstall>
-    <QtModules>core;xml;gui</QtModules>
+    <QtModules>core;gui;network;xml</QtModules>
   </PropertyGroup>
   <PropertyGroup Label="QtSettings" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <QtInstall>msvc2017_64</QtInstall>
@@ -159,7 +159,7 @@
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <TreatWChar_tAsBuiltInType>true</TreatWChar_tAsBuiltInType>
-      <WarningLevel>Level3</WarningLevel>
+      <WarningLevel>Level4</WarningLevel>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Lib>
