Fixed Multiplayer and paths

--- a/VS/kbang_common.vcxproj
+++ b/VS/kbang_common.vcxproj
@@ -85,7 +85,7 @@
   </PropertyGroup>
   <PropertyGroup Label="QtSettings" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <QtInstall>msvc2017_64</QtInstall>
-    <QtModules>core;xml;gui</QtModules>
+    <QtModules>core;gui;network;xml</QtModules>
   </PropertyGroup>
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.props')">
     <Import Project="$(QtMsBuild)\qt.props" />
