--- a/VS/kbang-client.vcxproj
+++ b/VS/kbang-client.vcxproj
@@ -159,11 +159,11 @@
   </ImportGroup>
   <PropertyGroup Label="QtSettings" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <QtInstall>msvc2017_64</QtInstall>
-    <QtModules>core;xml;network;gui;multimedia;widgets</QtModules>
+    <QtModules>core;gui;multimedia;network;widgets;xml</QtModules>
   </PropertyGroup>
   <PropertyGroup Label="QtSettings" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <QtInstall>msvc2017_64</QtInstall>
-    <QtModules>core;xml;network;gui;multimedia;widgets</QtModules>
+    <QtModules>core;gui;multimedia;network;widgets;xml</QtModules>
   </PropertyGroup>
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.props')">
     <Import Project="$(QtMsBuild)\qt.props" />
